fix layout issues and styling

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -9,8 +9,6 @@ body {
 .content {
   display: flex;
   flex: 1;
-  padding: 0;
-  margin: 0;
 }
 
 .header {
@@ -43,24 +41,24 @@ body {
 }
 
 .card {
+  width: 350px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  flex: 0 0 200px;
-  flex-wrap: wrap;
-  padding: 12px;
+  padding: 16px;
 }
 
 .class-container {
   display: flex;
-  padding: 48px;
   flex-wrap: wrap;
-  justify-content: space-between;
+  padding: 48px;
+  gap: 24px;
 }
 
 ul {
   list-style-type: none;
-  padding: 0;
+  padding: 0px;
+  margin: 0px;
 }
 
 a {
